Re-build from Rmarkdown files

--- a/summary.html
+++ b/summary.html
@@ -241,6 +241,7 @@ if (window.hljs) {
 
 
 
+
 <style type="text/css">
 .main-container {
   max-width: 940px;
@@ -261,6 +262,9 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
+}
+details > summary > p:only-child {
+  display: inline;
 }
 pre code {
   padding: 0;
@@ -349,13 +353,20 @@ pre code {
 </div>
 
 
-<div id="our-first-map-showing-all-king-co-parks" class="section level2">
-<h2>Our first map, showing all King Co parks</h2>
+<div id="overview" class="section level2">
+<h2>Overview</h2>
+</div>
+<div id="spatial-view-of-park-quality" class="section level2">
+<h2>Spatial View of Park Quality</h2>
 <iframe src="outputs/kingco_parks.html" width="800" height="500" style="border: none;" data-external="1">
 </iframe>
 </div>
-<div id="another-section" class="section level2">
-<h2>Another section</h2>
+<div id="benefit-risk-relationships" class="section level2">
+<h2>Benefit-Risk Relationships</h2>
+<p>Goal is to maximize the benefit and minimize the risk with an equity lens.</p>
+</div>
+<div id="key-results" class="section level2">
+<h2>Key Results</h2>
 </div>
 
 
